--- a/styles/pages/home/_header.scss
+++ b/styles/pages/home/_header.scss
@@ -17,7 +17,7 @@
     justify-content: space-between;
     margin: 0;
     padding: 5vh 0;
-    list-style: none;
+    // list-style: none;
 }
 
 .header__item {
